--- a/node-mongo-docker/package.json
+++ b/node-mongo-docker/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.5.7",
     "express": "^4.17.1",
     "mongoose": "^5.5.15",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   }
